--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,8 @@ Authors@R: c(
     )
 Depends: R (>= 4.0.1)
 Imports:
-  knitr
+  ggplot2,
+  dplyr,
+  tidyr,
 URL: https://github.com/rudeboybert/livedata
 BugReports: https://github.com/rudeboybert/livedata/issues
