--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,11 @@ Authors@R: c(
     )
 Depends: R (>= 4.0.1)
 Imports:
+  testthat,
   ggplot2,
   dplyr,
   tidyr,
   readr
 URL: https://github.com/rudeboybert/livedata
 BugReports: https://github.com/rudeboybert/livedata/issues
+Config/testthat/edition: 3
