--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: livedata
 Title: Testing livedata
-Description: Testing livedata
+Description: Testing livedata repository.
 License: MIT + file LICENSE
 Version: 0.0.0.9000
 Authors@R: c(
